@@ -52,9 +52,6 @@
 	- allow ${DOM} substitions when copying from global
 	- https://www.virtualmin.com/ticket-tracker/bug?bug%5fnumber=399
 
-  - setup squirrelmail virtualhost plugin by default
-	- conf.pl infinite loop?
-
   - better mail log viewing / reporting
 	- parse both postfix and procmail logs, integrate to show delivery
 
