@@ -182,7 +182,7 @@ else {
 if (!&setup_php_modules($d, $script, $ver, $phpver)) {
 	exit(1);
 	}
-if (!&setup_pear_modules($d, $script, $ver, $phpver)) {
+if (!&setup_pear_modules($d, $script, $ver, $phpver, $opts)) {
 	exit(1);
 	}
 
