@@ -72,7 +72,8 @@ foreach $sinfo (@sinfos) {
 		# Install needed PHP modules
 		$modok = &setup_php_modules($d, $script, $ver, $phpver);
 		if ($modok) {
-			$modok = &setup_pear_modules($d, $script, $ver,$phpver);
+			$modok = &setup_pear_modules($d, $script, $ver,
+						     $phpver, $opts);
 			}
 		$modok || next;
 
