@@ -578,3 +578,4 @@ Re-factored all code for displaying quota fields, so that the text box is greyed
 Fixed the cPanel migration code to handle new Maildir++ format mailboxes.
 Added Prev/Next buttons to template form, for easily navigating through sections.
 Email to all domain owners and all mailboxes in a domain can now use substitions like ${DOM} and ${QUOTA}.
+Added the virtusertable plugin to the Squirrelmail script installer, so that users can login with their email addresses.
